crates/qubit-macros/tests/ui/attribute-handler-kind-missing.rs
use qubit_macros::handler;

#[handler]
async fn my_handler() {}

fn main() {}
